# aws-ecs-airflow

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  sync_git
docs/: terraform_aws_user.md
infrastructure/: .terraform.lock.hcl  postgres.tf  provider.tf
src/: aws_config.py
